# speakrs

./: .gitignore  Cargo.toml  README.md
src/: inference.rs  lib.rs  models.rs
src/pipeline/: config.rs
tests/: webgpu.rs
